# dire-ne-pas-dire-telegram-bot

./: .gitignore  README.md  pyproject.toml
bot/: config.py  db.py  dire-ne-pas-dire-telegram-bot.env.example  main.py  scheduler.py  scrape.py
deploy/: dire-ne-pas-dire-telegram-bot.env.example  dire-ne-pas-dire-telegram-bot.service
